--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ notifications:
   slack: codewarsaw:npAF0jxCQXQBqcW3b74qxv6I
 after_success:
     - sh .travis/deploy_dockerhub.sh
+    - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_heroku.sh
