--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ script:
     - python -m pytest -v
 notifications:
   slack: codewarsaw:npAF0jxCQXQBqcW3b74qxv6I
-after_success:
-    - sh .travis/deploy_dockerhub.sh
-    - sh .travis/deploy_heroku.sh
+#after_success:
+#    - sh .travis/deploy_dockerhub.sh
+      #    - sh .travis/deploy_heroku.sh
 deploy:
     provider: heroku
     api_key:
